--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
+  line_awesome_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
